--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,9 @@
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
               <ul class="navbar-nav">
                 <li class="nav-item my-1">
+                  <a class="nav-link scroll" href="#home">Home</a>
+                </li>
+                <li class="nav-item my-1">
                   <a class="nav-link scroll" href="#about">About</a>
                 </li>
                 <li class="nav-item my-1">
