--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="INSERT DESCRIPTION HERE">
   <meta name="author" content="elemis">
   <title>Bearded Dragon Care – How to Keep Your Pets Happy & Healthy!</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
@@ -227,7 +227,7 @@
         <!-- /column -->
       </div>
       <!--/.row -->
-      <p class="lead mt-10">OceansidePlumbing.com is a participant in [name of affilate program]. When you call the phone number on our site, we may earn an affiliate commission at no extra cost to you. <a href="terms.html">Read our full Privacy Policy here</p>
+      <p class="lead mt-10">BeardedDragons.com is a participant in [name of affilate program]. When you call the phone number on our site, we may earn an affiliate commission at no extra cost to you. <a href="terms.html">Read our full Privacy Policy here</p>
       <hr class="mt-6 mb-7" />
       <div class="d-md-flex align-items-center justify-content-between">
         <p class="mb-2 mb-lg-0">© 2022 BeardedDragons.com – All rights reserved.</p>
